deploy/oauth-agent-service-config/oauth-agent-service-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-agent-service-service
spec:
  type: ClusterIP
  selector:
    app: oauth-agent-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http-port
